--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ng2-smart-table": "^0.4.0-5",
     "ng2-table": "^1.3.2",
     "rxjs": "5.0.0-beta.12",
+    "semantic-ui": "^2.2.6",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
